@@ -29,10 +29,10 @@ static BOOLEAN scanlines;
 static BOOLEAN upload_transitiontexture = FALSE;
 
 #if SDL_BYTEORDER == SDL_BIG_ENDIAN
-#define R_MASK 0x00ff0000
-#define G_MASK 0x0000ff00
-#define B_MASK 0x000000ff
-#define A_MASK 0xff000000
+#define R_MASK 0xff000000
+#define G_MASK 0x00ff0000
+#define B_MASK 0x0000ff00
+#define A_MASK 0x000000ff
 #else
 #define R_MASK 0x000000ff
 #define G_MASK 0x0000ff00
