@@ -1,4 +1,5 @@
 Changes towards version 0.2:
+- Fixed OpenGL colors on MacOS X -Mika
 - Added a sane cmd-line naming scheme: --opt=(pc|3do) see --help for more -PBlue
 - Added new font effect (PC-lander messages), and set colors for text -PBlue
 - Use correct font for 'CAPTAIN', 'FUEL', and 'CREW' is status screen -PBlue
